--- a/views/page/home.jade
+++ b/views/page/home.jade
@@ -2,7 +2,16 @@ extends layout
 
 block body
 
-  br
-  | Node.js: #{version}
-  br
-  | Running in #{envmode} mode.
+  div
+    | Node.js: #{version}
+  div
+    | Running in #{envmode} mode.
+  div
+    h4 Demo error pages:
+    ul
+      li
+        a(href='/403') 403 - Not alowed!
+      li
+        a(href='/404') 404 - Route not found!
+      li
+        a(href='/500') 500 - Bad cat, keyboards and cats don't mix.
