--- a/views/page/layout.jade
+++ b/views/page/layout.jade
@@ -6,7 +6,7 @@ html(lang='en')
     meta(charset='utf-8')
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
 
-    link(rel='stylesheet', href='/app-theme.css')
+    link(rel='stylesheet', href='/assets/css/app-theme.css')
 
   body
 
